base/integrations/heartbeats.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: crm-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: crm-heartbeat
  template:
    metadata:
      labels:
        app: crm-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: identity-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: identity-heartbeat
  template:
    metadata:
      labels:
        app: identity-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: planning-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: planning-heartbeat
  template:
    metadata:
      labels:
        app: planning-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mailing-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mailing-heartbeat
  template:
    metadata:
      labels:
        app: mailing-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
