base/integrations/mcp-heartbeats.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-mcp-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend-mcp-heartbeat
  template:
    metadata:
      labels:
        app: frontend-mcp-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kassa-mcp-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kassa-mcp-heartbeat
  template:
    metadata:
      labels:
        app: kassa-mcp-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: facturatie-mcp-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: facturatie-mcp-heartbeat
  template:
    metadata:
      labels:
        app: facturatie-mcp-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: crm-mcp-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: crm-mcp-heartbeat
  template:
    metadata:
      labels:
        app: crm-mcp-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: monitoring-mcp-heartbeat
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 100
      - pause: {duration: 3m}
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: monitoring-mcp-heartbeat
  template:
    metadata:
      labels:
        app: monitoring-mcp-heartbeat
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: heartbeat
        image: ghcr.io/integrationproject-groep1/heartbeat:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
